// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MagicToast renders alerts correctly 1`] = `
<RNSFullWindowOverlay
  style={
    {
      "height": "100%",
      "position": "absolute",
      "width": "100%",
    }
  }
>
  <View
    pointerEvents="box-none"
    style={
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      pointerEvents="box-none"
      style={
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        animatedStyle={
          {
            "value": {},
          }
        }
        collapsable={false}
        entering={
          FadeIn {
            "build": [Function],
            "callbackV": undefined,
            "dampingV": undefined,
            "delayV": undefined,
            "durationV": 250,
            "easingV": undefined,
            "initialValues": undefined,
            "massV": undefined,
            "overshootClampingV": undefined,
            "randomizeDelay": false,
            "restDisplacementThresholdV": undefined,
            "restSpeedThresholdV": undefined,
            "rotateV": undefined,
            "stiffnessV": undefined,
            "type": undefined,
          }
        }
        exiting={
          FadeOut {
            "build": [Function],
            "callbackV": undefined,
            "dampingV": undefined,
            "delayV": undefined,
            "durationV": 250,
            "easingV": undefined,
            "initialValues": undefined,
            "massV": undefined,
            "overshootClampingV": undefined,
            "randomizeDelay": false,
            "restDisplacementThresholdV": undefined,
            "restSpeedThresholdV": undefined,
            "rotateV": undefined,
            "stiffnessV": undefined,
            "type": undefined,
          }
        }
        pointerEvents="none"
        style={
          {
            "height": "100%",
            "position": "absolute",
            "width": "100%",
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          animatedStyle={
            {
              "value": {
                "opacity": 1,
              },
            }
          }
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "backgroundColor": "transparent",
              "flex": 1,
              "opacity": 1,
            }
          }
          testID="magic-modal-backdrop"
        />
      </View>
      <View
        animatedStyle={
          {
            "value": {
              "transform": [
                {
                  "translateX": 0,
                },
                {
                  "translateY": 0,
                },
              ],
            },
          }
        }
        collapsable={false}
        pointerEvents="box-none"
        style={
          {
            "flex": 1,
            "justifyContent": "center",
            "transform": [
              {
                "translateX": 0,
              },
              {
                "translateY": 0,
              },
            ],
          }
        }
      >
        <View
          animatedStyle={
            {
              "value": {},
            }
          }
          collapsable={false}
          entering={
            FadeInUp {
              "build": [Function],
              "callbackV": undefined,
              "dampingV": undefined,
              "delayV": undefined,
              "durationV": 250,
              "easingV": undefined,
              "initialValues": undefined,
              "massV": undefined,
              "overshootClampingV": undefined,
              "randomizeDelay": false,
              "restDisplacementThresholdV": undefined,
              "restSpeedThresholdV": undefined,
              "rotateV": undefined,
              "stiffnessV": undefined,
              "type": undefined,
            }
          }
          exiting={
            FadeOutUp {
              "build": [Function],
              "callbackV": undefined,
              "dampingV": undefined,
              "delayV": undefined,
              "durationV": 250,
              "easingV": undefined,
              "initialValues": undefined,
              "massV": undefined,
              "overshootClampingV": undefined,
              "randomizeDelay": false,
              "restDisplacementThresholdV": undefined,
              "restSpeedThresholdV": undefined,
              "rotateV": undefined,
              "stiffnessV": undefined,
              "type": undefined,
            }
          }
          pointerEvents="box-none"
          style={
            {
              "flex": 1,
              "justifyContent": "flex-start",
            }
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "#191919",
                  "flexDirection": "row",
                  "gap": 15,
                  "padding": 25,
                },
                {
                  "paddingTop": 25,
                },
                undefined,
              ]
            }
            testID="magic-toast"
          >
            <RNSVGSvgView
              align="xMidYMid"
              bbHeight={20}
              bbWidth={20}
              fill="white"
              focusable={false}
              height={20}
              meetOrSlice={0}
              minX={0}
              minY={0}
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  {
                    "flex": 0,
                    "height": 20,
                    "width": 20,
                  },
                ]
              }
              vbHeight={512}
              vbWidth={512}
              width={20}
              x="0px"
              y="0px"
            >
              <RNSVGGroup
                fill={
                  {
                    "payload": 4294967295,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "fill",
                  ]
                }
              >
                <RNSVGPath
                  d="M501.362 383.95L320.497 51.474c-29.059-48.921-99.896-48.986-128.994 0L10.647 383.95c-29.706 49.989 6.259 113.291 64.482 113.291h361.736c58.174 0 94.203-63.251 64.497-113.291zM256 437.241c-16.538 0-30-13.462-30-30s13.462-30 30-30 30 13.462 30 30-13.462 30-30 30zm30-120c0 16.538-13.462 30-30 30s-30-13.462-30-30v-150c0-16.538 13.462-30 30-30s30 13.462 30 30v150z"
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                />
              </RNSVGGroup>
            </RNSVGSvgView>
            <Text
              style={
                [
                  {
                    "color": "white",
                    "fontWeight": "bold",
                  },
                  undefined,
                ]
              }
            >
              Taveira
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNSFullWindowOverlay>
`;

exports[`MagicToast renders success correctly 1`] = `
<RNSFullWindowOverlay
  style={
    {
      "height": "100%",
      "position": "absolute",
      "width": "100%",
    }
  }
>
  <View
    pointerEvents="box-none"
    style={
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      pointerEvents="box-none"
      style={
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        animatedStyle={
          {
            "value": {},
          }
        }
        collapsable={false}
        entering={
          FadeIn {
            "build": [Function],
            "callbackV": undefined,
            "dampingV": undefined,
            "delayV": undefined,
            "durationV": 250,
            "easingV": undefined,
            "initialValues": undefined,
            "massV": undefined,
            "overshootClampingV": undefined,
            "randomizeDelay": false,
            "restDisplacementThresholdV": undefined,
            "restSpeedThresholdV": undefined,
            "rotateV": undefined,
            "stiffnessV": undefined,
            "type": undefined,
          }
        }
        exiting={
          FadeOut {
            "build": [Function],
            "callbackV": undefined,
            "dampingV": undefined,
            "delayV": undefined,
            "durationV": 250,
            "easingV": undefined,
            "initialValues": undefined,
            "massV": undefined,
            "overshootClampingV": undefined,
            "randomizeDelay": false,
            "restDisplacementThresholdV": undefined,
            "restSpeedThresholdV": undefined,
            "rotateV": undefined,
            "stiffnessV": undefined,
            "type": undefined,
          }
        }
        pointerEvents="none"
        style={
          {
            "height": "100%",
            "position": "absolute",
            "width": "100%",
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          animatedStyle={
            {
              "value": {
                "opacity": 1,
              },
            }
          }
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "backgroundColor": "transparent",
              "flex": 1,
              "opacity": 1,
            }
          }
          testID="magic-modal-backdrop"
        />
      </View>
      <View
        animatedStyle={
          {
            "value": {
              "transform": [
                {
                  "translateX": 0,
                },
                {
                  "translateY": 0,
                },
              ],
            },
          }
        }
        collapsable={false}
        pointerEvents="box-none"
        style={
          {
            "flex": 1,
            "justifyContent": "center",
            "transform": [
              {
                "translateX": 0,
              },
              {
                "translateY": 0,
              },
            ],
          }
        }
      >
        <View
          animatedStyle={
            {
              "value": {},
            }
          }
          collapsable={false}
          entering={
            FadeInUp {
              "build": [Function],
              "callbackV": undefined,
              "dampingV": undefined,
              "delayV": undefined,
              "durationV": 250,
              "easingV": undefined,
              "initialValues": undefined,
              "massV": undefined,
              "overshootClampingV": undefined,
              "randomizeDelay": false,
              "restDisplacementThresholdV": undefined,
              "restSpeedThresholdV": undefined,
              "rotateV": undefined,
              "stiffnessV": undefined,
              "type": undefined,
            }
          }
          exiting={
            FadeOutUp {
              "build": [Function],
              "callbackV": undefined,
              "dampingV": undefined,
              "delayV": undefined,
              "durationV": 250,
              "easingV": undefined,
              "initialValues": undefined,
              "massV": undefined,
              "overshootClampingV": undefined,
              "randomizeDelay": false,
              "restDisplacementThresholdV": undefined,
              "restSpeedThresholdV": undefined,
              "rotateV": undefined,
              "stiffnessV": undefined,
              "type": undefined,
            }
          }
          pointerEvents="box-none"
          style={
            {
              "flex": 1,
              "justifyContent": "flex-start",
            }
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "#191919",
                  "flexDirection": "row",
                  "gap": 15,
                  "padding": 25,
                },
                {
                  "paddingTop": 25,
                },
                {
                  "backgroundColor": "#00af98",
                  "gap": 10,
                },
              ]
            }
            testID="magic-toast"
          >
            <RNSVGSvgView
              align="xMidYMid"
              bbHeight={25}
              bbWidth={25}
              fill="white"
              focusable={false}
              height={25}
              meetOrSlice={0}
              minX={0}
              minY={0}
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  {
                    "flex": 0,
                    "height": 25,
                    "width": 25,
                  },
                ]
              }
              vbHeight={256}
              vbWidth={256}
              width={25}
            >
              <RNSVGGroup
                fill={
                  {
                    "payload": 4294967295,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "fill",
                  ]
                }
              >
                <RNSVGPath
                  d="M128 24a104 104 0 1 0 104 104A104.11 104.11 0 0 0 128 24Zm45.66 85.66-56 56a8 8 0 0 1-11.32 0l-24-24a8 8 0 0 1 11.32-11.32L112 148.69l50.34-50.35a8 8 0 0 1 11.32 11.32Z"
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                />
              </RNSVGGroup>
            </RNSVGSvgView>
            <Text
              style={
                [
                  {
                    "color": "white",
                    "fontWeight": "bold",
                  },
                  undefined,
                ]
              }
            >
              Taveira
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNSFullWindowOverlay>
`;
